Fixed index page

--- a/Semester_2/Labo_1/Uitdaging_Images/index.html
+++ b/Semester_2/Labo_1/Uitdaging_Images/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 
-<input id="txtAdres" type="text" placeholder="Linkadres van image hier" autofocus />
+<input type="text" id="txtInput" plcaholder="Linkadres van image hier" autofocus />
 <input id="btnAdd" type="button" value="Voeg toe" />
+<div id="divImages"></div>
 
 <script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 </body>
