--- a/Semester_2/Labo_3/Kleurenwisselaar/index.html
+++ b/Semester_2/Labo_3/Kleurenwisselaar/index.html
@@ -8,6 +8,7 @@
 <body>
 
 <input type="button" value="Button 1" />
+<div id="btnButton2" class="button">Button 1</div>
 
 <script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 </body>
