--- a/Semester_2/Labo_3/Kleurenwisselaar/index.html
+++ b/Semester_2/Labo_3/Kleurenwisselaar/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Opdracht Kleurenwisselaar</title>
+    <title>Kleurenwisselaar</title>
 </head>
 <body>
 
-<input type="button" value="Button 1" />
-<div id="btnButton2" class="button">Button 1</div>
+    <h2>Kleurenwisselaar</h2>
+    <button class="button" id="btnButton1">Button 1</button>
+    <button class="button" id="btnButton2">Button 2</button>
+    <button class="button" id="btnButton3">Button 3</button>
 
 <script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 </body>
