--- a/Semester_2/Labo_3/index.html
+++ b/Semester_2/Labo_3/index.html
@@ -13,6 +13,7 @@
 <a href="./demonstratie%20slider/index.html">Demonstratie Slider</a>
 <a href="./Kleurenwisselaar/index.html">Kleurenwisselaar</a>
 <a href="./Opdracht_paragrafen/index.html">Paragrafen</a>
+<a href="./Producten/index.html">Producten</a>
 
 </body>
 </html>
