--- a/Semester_2/index.html
+++ b/Semester_2/index.html
@@ -13,7 +13,7 @@
 <a href="./Labo_1/index.html">Labo_1</a>
 <a href="./Labo_2/index.html">Labo_2</a>
 <a href="./Labo_3/index.html">Labo_3</a>
-<a href="./Labo_4/index.html">Labo_4</a>
+<a href="./Labo_4/">Labo_4</a>
 
 </body>
 </html>
