--- a/Semester_2/Labo_4/index.html
+++ b/Semester_2/Labo_4/index.html
@@ -10,10 +10,10 @@
 
 <h2>Labo 4 - Index</h2>
 
-<a href="./FormulierElementen/">Invulformulier</a>
-<a href="./Man_Van_An/">Man_Van_An</a>
-<a href="./Spaties_Met_Functie/">Spaties_Met_Functie</a>
-<a href="./Spaties_Op_Console/">Spaties_Op_Console</a>
+<a href="./FormulierElementen/formulierElementen.html">Invulformulier</a>
+<a href="./Man_Van_An/index.html">Man_Van_An</a>
+<a href="./Spaties_Met_Functie/index.html">Spaties_Met_Functie</a>
+<a href="./Spaties_Op_Console/index.html">Spaties_Op_Console</a>
 
 </body>
 </html>
