--- a/Semester_2/index.html
+++ b/Semester_2/index.html
@@ -14,6 +14,7 @@
 <a href="./Labo_2/index.html">Labo_2</a>
 <a href="./Labo_3/index.html">Labo_3</a>
 <a href="./Labo_4/index.html">Labo_4</a>
+<a href="./Labo_5/index.html">Labo_5</a>
 
 </body>
 </html>
