--- a/Semester_2/Labo_5/index.html
+++ b/Semester_2/Labo_5/index.html
@@ -9,7 +9,8 @@
 <h2>Labo 4 - Index</h2>
 
 <a href="./De%20en%20het/index.html">De en Het</a><br>
-<a href="./Tigrams/index.html">Tigrams</a>
+<a href="./Tigrams/index.html">Tigrams</a><br>
+<a href="./Gemeenten/index.html">Gemeenten</a>
 
 </body>
 </html>
