--- a/Semester_2/Labo_5/index.html
+++ b/Semester_2/Labo_5/index.html
@@ -10,7 +10,8 @@
 
 <a href="./De%20en%20het/index.html">De en Het</a><br>
 <a href="./Tigrams/index.html">Tigrams</a><br>
-<a href="./Gemeenten/index.html">Gemeenten</a>
+<a href="./Gemeenten/index.html">Gemeenten</a><br>
+<a href="./Formwaarden/index.html">Formwaarden</a>
 
 </body>
 </html>
