Changed index page + fixed file path

--- a/Semester_2/Labo_5/index.html
+++ b/Semester_2/Labo_5/index.html
@@ -12,6 +12,7 @@
 <a href="./Tigrams/index.html">Tigrams</a><br>
 <a href="./Gemeenten/index.html">Gemeenten</a><br>
 <a href="./Formwaarden/index.html">Formwaarden</a>
+<a href="./Formvalidatie/index.html">Formvalidatie</a>
 
 </body>
 </html>
