--- a/Semester_2/index.html
+++ b/Semester_2/index.html
@@ -15,6 +15,7 @@
 <a href="./Labo_3/index.html">Labo_3</a>
 <a href="./Labo_4/index.html">Labo_4</a>
 <a href="./Labo_5/index.html">Labo_5</a>
+<a href="./Labo_6/index.html">Labo_6</a>
 
 </body>
 </html>
