--- a/Semester_2/Labo_6/index.html
+++ b/Semester_2/Labo_6/index.html
@@ -11,6 +11,9 @@
 <a href="./demo events/index.html">Demo events</a><br>
 <a href="./Dom-Tree Nodes/index.html">Dom-Tree Nodes</a><br>
 <a href="./Extra Oefeningen Nodes/index.html">Extra Oefeningen Nodes</a><br>
+<a href="./demo event bubbling/index.html">Demo Event bubbling</a><br>
+<a href="./This-keyword/index.html">This-keyword</a><br>
+<a href="./ColorPicker/index.html">Colorpicker</a><br>
 
 </body>
 </html>
