--- a/Semester_2/Labo_7/index.html
+++ b/Semester_2/Labo_7/index.html
@@ -2,13 +2,14 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Semester 2 - Index</title>
+    <title>Labo 7 - Index</title>
 </head>
 <body>
 
-<h2>Semester 2</h2>
+<h2>Labo 7</h2>
 
 <a href="./HitAnObject/index.html">Hit an Object</a><br>
+<a href="./Matching%20game/index.html">Matching game</a><br>
 
 </body>
 </html>
