--- a/Semester_2/Labo_3/index.html
+++ b/Semester_2/Labo_3/index.html
@@ -2,7 +2,6 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles/style.css">
     <title>Labo 3 - Index</title>
 </head>
 <body>
@@ -10,11 +9,11 @@
 
 <h2>Labo 3</h2>
 
-<a href="./ColorPicker/index.html">ColorPicker</a>
-<a href="./demonstratie%20slider/index.html">Demonstratie Slider</a>
-<a href="./Kleurenwisselaar/index.html">Kleurenwisselaar</a>
-<a href="./Opdracht_paragrafen/index.html">Paragrafen</a>
-<a href="./Producten/index.html">Producten</a>
+<a href="./ColorPicker/index.html">ColorPicker</a><br>
+<a href="./demonstratie%20slider/index.html">Demonstratie Slider</a><br>
+<a href="./Kleurenwisselaar/index.html">Kleurenwisselaar</a><br>
+<a href="./Opdracht_paragrafen/index.html">Paragrafen</a><br>
+<a href="./Producten/index.html">Producten</a><br>
 
 </body>
 </html>
