--- a/Semester_2/index.html
+++ b/Semester_2/index.html
@@ -6,17 +6,16 @@
     <title>Semester 2 - Index</title>
 </head>
 <body>
-<script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 
 <h2>Semester 2</h2>
 
-<a href="./Labo_1/index.html">Labo_1</a>
-<a href="./Labo_2/index.html">Labo_2</a>
-<a href="./Labo_3/index.html">Labo_3</a>
-<a href="./Labo_4/index.html">Labo_4</a>
-<a href="./Labo_5/index.html">Labo_5</a>
-<a href="./Labo_6/index.html">Labo_6</a>
-<a href="./Labo_7/index.html">Labo_7</a>
+<a href="./Labo_1/index.html">Labo_1</a><br>
+<a href="./Labo_2/index.html">Labo_2</a><br>
+<a href="./Labo_3/index.html">Labo_3</a><br>
+<a href="./Labo_4/index.html">Labo_4</a><br>
+<a href="./Labo_5/index.html">Labo_5</a><br>
+<a href="./Labo_6/index.html">Labo_6</a><br>
+<a href="./Labo_7/index.html">Labo_7</a><br>
 
 </body>
 </html>
